--- a/css/layout.css
+++ b/css/layout.css
@@ -37,6 +37,10 @@
     position: relative;
 }
 
+.main-Panel.includeTab {
+    padding: 0;
+}
+
 .main-Panel-border {
     border-radius: 5px;
     border: 1px solid #c3d2e6;
@@ -188,9 +192,9 @@ footer {
 .tablePanel {
     height: 100%;
     overflow: auto;
-    border-radius: 5px;
+    /* border-radius: 5px;
     border: 1px solid #c5d0e1;
-    /* box-shadow: 0 6px 5px rgba(103, 179, 60, 0.2); */
+    box-shadow: 0 6px 5px rgba(103, 179, 60, 0.2); */
 }
 
 .tablePanel .layui-table[lay-skin=line] {
@@ -203,29 +207,27 @@ footer {
     margin: 0;
 }
 
+.tablePanel .layui-table thead tr {
+    background: #f2f2f2;
+}
+
 .tablePanel .layui-table thead th {
     height: 50px;
     text-align: center;
     color: #000;
     font-size: 14px;
     padding: 9px 5px;
+    border: 1px solid #e4e4e4;
 }
 
 .tablePanel .layui-table tbody td {
     height: 50px;
     text-align: center;
     padding: 9px 5px;
-    color: #000;
-    border-bottom: 1px solid #c2d0e3;
+    color: #525252;
+    border: 1px solid #e4e4e4;
 }
 
-.tablePanel .layui-table tbody tr:last-child td {
-    border-bottom: none;
-}
-
-.tablePanel .layui-table thead tr {
-    background: transparent;
-}
 
 .tablePanel .normalBtn {
     padding: 3px 10px;
@@ -241,7 +243,8 @@ footer {
     display: flex;
     align-items: center;
 }
-.common-ul li.specailImgPanle{
+
+.common-ul li.specailImgPanle {
     align-items: flex-start;
 }
 
@@ -344,6 +347,11 @@ footer {
     border: 1px solid #45bc08;
 }
 
+.notBorder .selectPanel input:focus {
+    color: #171717;
+    border: none;
+}
+
 .selectPanel {
     width: 61%;
     height: 35px;
@@ -352,10 +360,23 @@ footer {
     padding: 5px 8px;
     margin-right: 8px;
     position: relative;
+    font-size: 13px;
 }
 
 .selectPanel.subWidth {
     width: 40%;
+}
+
+.notBorder .selectPanel input {
+    width: 100%;
+    border-radius: 3px;
+    border: 1px solid transparent;
+    padding: 0;
+}
+
+.notBorder .selectPanel input:focus {
+    color: #171717;
+    border: 1px solid #45bc08;
 }
 
 .chooseBtn {
@@ -440,7 +461,6 @@ footer {
 
 /* tab面板 */
 .tab-panel {
-    background: #e4e4e4;
     text-align: center;
     color: #000;
     font-size: 16px;
@@ -510,21 +530,29 @@ footer {
 /* 遮罩面板 */
 .selectOut {
     font-size: 14px;
-    position: absolute;
+    position: fixed;
     width: 100%;
+    min-height: 50px;
+    max-height: 200px;
     background: #ffffff;
     left: 0;
-    bottom: -55px;
+    bottom: 0;
     z-index: 1;
+    overflow: auto;
 }
 
-.selectOut ul{
+.selectOut.selectOutSignPanel {
+    height: 200px;
+}
+
+.selectOut ul {
     position: relative;
     overflow: auto;
     height: auto;
     max-height: 400px;
     text-align: center;
 }
+
 .selectOut ul li {
     border-bottom: 1px solid #d0ddec;
     height: 5.0rem;
@@ -535,13 +563,9 @@ footer {
 .selectOut ul li a {
     display: inline-block;
     padding-left: 1rem;
-    width: 100%;
 }
-.selectOut ul li a:hover {
-    background: #bbd2dd;
-    color: #fff;
-}
-.selectOut::before{
+
+.selectOut::before {
     content: "";
     width: 100%;
     height: 100%;
@@ -549,4 +573,138 @@ footer {
     top: 0;
     left: 0;
     background: rgba(0, 0, 0, 0.4);
+}
+
+.selectOut .icon-checkBox {
+    width: 14px;
+    height: 14px;
+    border-radius: 2px;
+    border: 1px solid #bbd2dd;
+}
+
+.selectOut ul li.selected .icon-checkBox {
+    width: 14px;
+    height: 14px;
+    border-radius: 2px;
+    border: 5px solid #46b81b;
+}
+
+.selectOut .icon-radio {
+    width: 14px;
+    height: 14px;
+    border-radius: 50px;
+    border: 1px solid #bbd2dd;
+}
+
+.selectOut ul li.selected .icon-radio {
+    width: 14px;
+    height: 14px;
+    border-radius: 50px;
+    border: 5px solid #46b81b;
+}
+
+.btnBox {
+    position: relative;
+    background: #46b81b;
+    width: 100%;
+    height: 5rem;
+    line-height: 3.0rem;
+    color: #fff;
+}
+
+.selectOut button {
+    outline: none;
+    border: none;
+    padding: 1.2rem 2rem;
+    position: absolute
+}
+
+.cancleBtn {
+    background: transparent;
+    left: 0;
+}
+
+.currenBtn {
+    background: transparent;
+    right: 0;
+}
+
+.signNamePanel {
+    height: 150px;
+    width: 100%;
+    padding: 10px;
+    background: #fff;
+    position: absolute;
+}
+
+.signNameArea {
+    width: 100%;
+    height: 100%;
+    border-radius: 4px;
+    border: 1px dashed #0af;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.windowPanel {
+    width: 100%;
+    position: absolute;
+    top: 25%;
+    left: 0;
+}
+
+.windowPanel::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.4);
+}
+
+.windowContentPanel {
+    background: #fff;
+    border-radius: 5px;
+    margin: 20px;
+    position: relative;
+}
+
+.windowContentPanel .headerPanel {
+    height: 50px;
+    background: #46b81b;
+    color: #fff;
+    font-size: 16px;
+    line-height: 50px;
+    text-align: center;
+    border-radius: 5px 5px 0 0;
+}
+
+.windowContentPanel .sub-content {
+    padding: 25px;
+    line-height: 25px;
+    font-size: 14px;
+    text-align: justify;
+}
+
+.windowContentPanel .closeBtn {
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    bottom: -50px;
+    left: calc((100% - 20px)/2);
+}
+
+.windowContentPanel.windowVideoPanel {
+    width: 100%;
+    margin: 0;
+    height: 100%;
+    background: transparent;
+    display: flex;
+    justify-content: center;
+}
+
+.videoPanel {
+    height: 180px;
 }
